syntax = "proto3";
package RichMedia;

message NTV2RichMediaReq {
  MultiMediaReqHead reqHead = 1;
  DownloadReq download = 3;
}

message MultiMediaReqHead {
  CommonHead common = 1;
  SceneInfo scene = 2;
  ClientMeta client = 3;
}

message CommonHead {
  uint32 requestId = 1;
  uint32 command = 2;
}

message SceneInfo {
  uint32 requestType = 101;
  uint32 businessType = 102;
  uint32 field103 = 103;
  uint32 sceneType = 200;
  C2CUserInfo c2c = 201;
  GroupInfo group = 202;
}

message C2CUserInfo {
  uint32 accountType = 1;
  string targetUid = 2;
}

message GroupInfo {
  uint32 groupId = 1;
}

message ClientMeta {
  uint32 agentType = 1;
}

message DownloadReq {
  IndexNode node = 1;
}

message MsgInfo {
  repeated MsgInfoBody msgInfoBody = 1;
  ExtBizInfo extBizInfo = 2;
}

message MsgInfoBody {
  IndexNode index = 1;
  PicInfo pic = 2;
  bool fileExist = 5;
}

message IndexNode {
  FileInfo info = 1;
  string fileUuid = 2;
  uint32 storeID = 3;
  uint32 uploadTime = 4;
  uint32 expire = 5;
  uint32 type = 6; //0
}

message FileInfo {
  uint32 fileSize = 1;
  string md5HexStr = 2;
  string sha1HexStr = 3;
  string fileName = 4;
  FileType fileType = 5;
  uint32 width = 6;
  uint32 height = 7;
  uint32 time = 8;
  uint32 original = 9;
}

message FileType {
  uint32 type = 1;
  uint32 picFormat = 2;
  uint32 videoFormat = 3;
  uint32 pttFormat = 4;
}

message PicInfo {
  string urlPath = 1;
  PicUrlExtParams ext = 2;
  string domain = 3;
}

message PicUrlExtParams {
  string originalParam = 1;
  string bigParam = 2;
  string thumbParam = 3;
}

message ExtBizInfo {
  PicExtBizInfo pic = 1;
  VideoExtBizInfo video = 2;
  uint32 busiType = 10;
}

message PicExtBizInfo {
  uint32 bizType = 1;
  string summary = 2;
  uint32 fromScene = 1001;
  uint32 toScene = 1002;
  uint32 oldFileId = 1003;
}

message VideoExtBizInfo {
  bytes pbReserve = 3;
}

message PicFileIdInfo {
  bytes sha1 = 2;
  uint32 size = 3;
  uint32 appid = 4;
  uint32 time = 5;
  uint32 expire = 10;
}

message NTV2RichMediaResp {
  DownloadResp download = 3;
}

message DownloadResp {
  string rKeyParam = 1;
  uint32 rKeyTtlSecond = 2;
  DownloadInfo info = 3;
  uint32 rKeyCreateTime = 4;
}

message DownloadInfo {
  string domain = 1;
  string urlPath = 2;
  uint32 httpsPort = 3;
}
